@@ -3,6 +3,7 @@ Changelog for hydra
 
 Release 8.9-dev
 * your patch? :)
+* CIDR notation (hydra -l test -p test 192.168.0.0/24 ftp) was not detected, fixed
 
 
 Release 8.8
